k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleet-commander
spec:
  selector:
    app: fleet-commander

  ports:
  - port: 80
    targetPort: 8080

  type: ClusterIP
